More spacing issues

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -139,8 +139,7 @@ footer {
 
     #title > h3 {
         font-size: 2rem;
-        margin-top: -1rem;
-        margin-bottom: -.5rem;
+        margin-top: -2rem;
     }
 
     form {
@@ -156,6 +155,6 @@ footer {
     form > button {
       font-size: 1.5rem;
       width: 90%;
-      margin: .5rem 5% 2rem 5%;
+      margin: .5rem 5% 3rem 5%;
     }
   }
